Build 60.2: Startup control improvements

--- a/www/ewd/ewdMonitor/index.html
+++ b/www/ewd/ewdMonitor/index.html
@@ -384,8 +384,8 @@
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.1/js/toastr.min.js"></script>
     <!--[if lte IE 8]><script language="javascript" type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/flot/0.8.2/excanvas.min.js"></script><![endif]-->
     <script language="javascript" type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/flot/0.8.2/jquery.flot.min.js"></script>
-    <script src="/ewdLite/EWD.js"></script>
-    <script type="text/javascript" src="/ewdLite/ewdBootstrap3.js"></script>
+    <script src="/ewdjs/EWD.js"></script>
+    <script type="text/javascript" src="/ewdjs/ewdBootstrap3.js"></script>
     
     <script type="text/javascript" src="app.js"></script>
 
