Build 66: ewdMonitor enhancements. Allow EWD.js to start with other frameworks than jQuery

--- a/www/ewd/ewdMonitor/internals.html
+++ b/www/ewd/ewdMonitor/internals.html
@@ -7,6 +7,8 @@
     <pre id="internals_socketClientByToken"></pre>
     <h4>ewd.poolSize</h4>
     <pre id="internals_poolSize"></pre>
+    <h4>Startup params (current runtime values)</h4>
+    <pre id="internals_params"></pre>
     <h4>ewd.process</h4>
     <pre id="internals_process"></pre>
     <h4>ewd.requestsByProcess</h4>
