--- a/www/ewd/ewdMonitor/wsMgr.html
+++ b/www/ewd/ewdMonitor/wsMgr.html
@@ -1,6 +1,8 @@
 <div class="row" id="wsMgrPageLoaded">
   <div class="col-md-12">
-    <h1>Web Service Security Management</h1>
+    <h1>Web Service Security Management
+        <button type="button" class="btn btn-primary pull-right" id="mgrPasswordBtn">Change Password</button>
+    </h1>
 
     <div id="manageUsersPanel" class="panel panel-primary">
       <div class="panel-heading">
