Build 67: Node Inspector integration and NodeM upgrade changes

--- a/www/ewd/ewdMonitor/internals.html
+++ b/www/ewd/ewdMonitor/internals.html
@@ -1,6 +1,8 @@
 <div class="row" id="internalsPageLoaded">
   <div class="col-md-12">
-    <h1>Internal Memory Data Structures</h1>
+    <h1>Internal Memory Data Structures
+      <button type="button" class="btn btn-primary pull-right" id="internalsDebugBtn">Change Debugging Ports</button>
+    </h1>
     <h4>ewd.socketClient</h4>
     <pre id="internals_socketClient"></pre>
     <h4>ewd.socketClientByToken</h4>
