--- a/www/ewd/ewdMonitor/index.html
+++ b/www/ewd/ewdMonitor/index.html
@@ -256,7 +256,10 @@
                               <button class="btn btn-success pull-right" type="button" id="cpStartBtn" data-toggle="tooltip" data-placement="top" title="" data-original-title="Start a new Child Process">
                                 <span class="glyphicon glyphicon-off"></span>
                                </button>
-
+                              
+                              <button class="btn btn-success pull-left" type="button" id="cpDebugBtn" data-toggle="tooltip" data-placement="top" title="" data-original-title="Start a new Child Process in Debug Mode">
+                                <span class="glyphicon glyphicon-wrench"></span>
+                               </button>
                             </th>
                           </tr>
                         </thead>
