Build 89.1: Updated EWD Federator Manager application

--- a/www/ewd/ewdFederatorMgr/navlist.html
+++ b/www/ewd/ewdFederatorMgr/navlist.html
@@ -1,3 +1,4 @@
 <li id="main_Nav" data-header="main"><a href="#">Overview</a></li>
 <li id="internals_Nav" data-header="internals"><a href="#">Internals</a></li>
 <li id="about_Nav" data-header="about"><a href="#">About</a></li>
+<li id="disconnect_Nav" data-header="disconnect"><a href="#">Disconnect</a></li>
