--- a/www/ewd/ewdFederatorMgr/index.html
+++ b/www/ewd/ewdFederatorMgr/index.html
@@ -128,6 +128,9 @@
       <!-- internals CONTAINER -->
       <div id="internals_Container" class="container collapse"></div>
 
+      <!-- disconnect CONTAINER -->
+      <div id="disconnect_Container" class="container collapse"></div>
+
       <div id="confirmPanel" class="modal fade"></div>
 
     </div>
