--- a/www/ewd/ewdFederatorMgr/internals.html
+++ b/www/ewd/ewdFederatorMgr/internals.html
@@ -1,7 +1,7 @@
 <div class="row" id="internalsPageLoaded">
   <div class="col-md-12">
     <h1>Internal Memory Data Structures
-      <button type="button" class="btn btn-primary pull-right" id="internalsDebugBtn">Change Debugging Ports</button>
+      <!--<button type="button" class="btn btn-primary pull-right" id="internalsDebugBtn">Change Debugging Ports</button>-->
     </h1>
     <h4>ewd.poolSize</h4>
     <pre id="internals_poolSize"></pre>
