--- a/www/ewd/ewdMonitor/logout.html
+++ b/www/ewd/ewdMonitor/logout.html
@@ -1,5 +1,8 @@
 <div class="row" id="aboutPageLoaded">
   <div class="col-md-12">
     <h1>The EWD.js Monitor has been shut down</h1>
+    <button class="btn btn-success" id="logout-restartBtn">
+      Restart ewdMonitor
+    </button>
   </div>
 </div>
