--- a/www/ewd/ewdMonitor/mgrPassword.html
+++ b/www/ewd/ewdMonitor/mgrPassword.html
@@ -1,8 +1,17 @@
+<br />
+<br />
 <form id="mgrPasswordForm" role="form">
-  <legend>Change Management Password:</legend>
+  <legend>Change Management Password</legend>
+    <div>Note: The Management password will be changed for runtime only.  It will not be changed in your EWD.js startup file</div>
+    <br />
+    <br />
     <div class="form-group">
-      <label for="mgrPassword">Password: &nbsp;</label>
-      <input type="text" class="form-control" id="mgrPassword" placeholder="Management Password" value=""/>
+      <label for="mgrCurrentPassword">Current Password: &nbsp;</label>
+      <input type="password" class="form-control" id="mgrCurrentPassword" placeholder="Current Management Password" value=""/>
+    </div>
+    <div class="form-group">
+      <label for="mgrNewPassword">New Password: &nbsp;</label>
+      <input type="password" class="form-control" id="mgrNewPassword" placeholder="New Management Password" value=""/>
     </div>
     <div>
       <button type="button" class="btn btn-primary pull-left" id="updateMgrPasswordBtn">Reset</button>
