--- a/www/ewd/ewdMonitor/wsMgr.html
+++ b/www/ewd/ewdMonitor/wsMgr.html
@@ -1,12 +1,10 @@
 <div class="row" id="wsMgrPageLoaded">
   <div class="col-md-12">
-    <h1>Web Service Security Management
-        <button type="button" class="btn btn-primary pull-right" id="mgrPasswordBtn">Change Password</button>
-    </h1>
+    <h1>Web Service Security Management</h1>
 
     <div id="manageUsersPanel" class="panel panel-primary">
       <div class="panel-heading">
-        <h3 class="panel-title" id="wsMgr-title">Manage Registered Users</h3>
+        <h3 class="panel-title" id="wsMgr-title">Manage Registered Web Service Clients/Users</h3>
       </div>
       <div class="panel-body">
 
