--- a/www/ewd/ewdMonitor/wsMgr.html
+++ b/www/ewd/ewdMonitor/wsMgr.html
@@ -2,7 +2,7 @@
   <div class="col-md-12">
     <h1>Web Service Security Management</h1>
 
-    <div id="manageUsersPanel" class="panel panel-primary">
+    <div id="manageWSUsersPanel" class="panel panel-primary">
       <div class="panel-heading">
         <h3 class="panel-title" id="wsMgr-title">Manage Registered Web Service Clients/Users</h3>
       </div>
@@ -53,7 +53,7 @@
       </div>
     </div>
 
-    <div id="editUsersPanel" class="panel panel-primary collapse">
+    <div id="editWSUsersPanel" class="panel panel-primary collapse">
       <div class="panel-heading">
         <h3 class="panel-title" id="wsMgrEdit-title">Edit Registered User</h3>
       </div>
