Bild 94: 2-factor authentication support; ewdFederatorMgr enhancements

--- a/www/ewd/ewdFederatorMgr/initialLogin.html
+++ b/www/ewd/ewdFederatorMgr/initialLogin.html
@@ -6,12 +6,8 @@
     <div id="loginPanelBody" class="modal-body">
       <legend>Authentication</legend>
       <div class="form-group">
-        <label for="username">ewdMonitor Username</label>
-        <input type="text" class="form-control" id="username" placeholder="Enter your ewdMonitor Username" />
-      </div>
-      <div id="login-password" class="form-group">
-        <label for="password">Password or Google Authenticator Code</label>
-        <input type="password" class="form-control" id="password" placeholder="Enter your Password or Google Authenticator Code" />
+        <label for="password">EWD.js Management Password: &nbsp;</label>
+        <input type="password" class="form-control" id="username" placeholder="Enter password" />
       </div>
     </div>
     <div class="modal-footer">
