--- a/www/ewd/ewdMonitor/login.html
+++ b/www/ewd/ewdMonitor/login.html
@@ -9,9 +9,9 @@
         <label for="username">ewdMonitor Username</label>
         <input type="text" class="form-control" id="username" placeholder="Enter your ewdMonitor Username" />
       </div>
-      <div class="form-group">
-        <label for="password">ewdMonitor Password</label>
-        <input type="password" class="form-control" id="password" placeholder="Enter your ewdMonitor Password" />
+      <div id="login-password" class="form-group">
+        <label for="password">Password or Google Authenticator Code</label>
+        <input type="password" class="form-control" id="password" placeholder="Enter your Password or Google Authenticator Code" />
       </div>
     </div>
     <div class="modal-footer">
