Updated Deprecation and Copyright Notices

--- a/extras/www/ewd/VistADemo/about.html
+++ b/extras/www/ewd/VistADemo/about.html
@@ -3,6 +3,6 @@
     <h1>EWD.js VistA Demonstration Application</h1>
     <h3>Build 1</h3>
     <h4>11 February 2014</h4>
-    <h5>&copy; 2014 <a href="http://www.mgateway.com" target="mgw">M/Gateway Developments Ltd</a></h5>
+    <h5>&copy; 2023 <a href="https://www.mgateway.com" target="mgw">MGateway Ltd</a></h5>
   </div>
 </div>
