--- a/extras/www/ewd/bootstrap3/about.html
+++ b/extras/www/ewd/bootstrap3/about.html
@@ -3,6 +3,6 @@
     <h1>EWD.js Application</h1>
     <h3>Build x</h3>
     <h4>10 February 2014</h4>
-    <h5>&copy; 2014 <a href="http://www.mgateway.com" target="mgw">M/Gateway Developments Ltd</a></h5>
+    <h5>&copy; 2023 <a href="https://www.mgateway.com" target="mgw">MGateway Ltd</a></h5>
   </div>
 </div>
