--- a/essentials/www/ewd/ewdMonitor/about.html
+++ b/essentials/www/ewd/ewdMonitor/about.html
@@ -3,6 +3,6 @@
     <h1>EWD.js Monitor</h1>
     <h3>Build 15</h3>
     <h4>18 November 2015</h4>
-    <h5>&copy; 2014-15 <a href="http://www.mgateway.com" target="mgw">M/Gateway Developments Ltd</a></h5>
+    <h5>&copy; 2023 <a href="https://www.mgateway.com" target="mgw">MGateway Ltd</a></h5>
   </div>
 </div>
