--- a/extras/www/ewd/ewdEncrypter/about.html
+++ b/extras/www/ewd/ewdEncrypter/about.html
@@ -3,7 +3,7 @@
     <h1>EWD VistA Encryption Tool</h1>
     <h3>Build 1</h3>
     <h4>28 February 2014</h4>
-    <h5>&copy; 2014 <a href="http://www.mgateway.com" target="mgw">M/Gateway Developments Ltd</a></h5>
+    <h5>&copy; 2023 <a href="https://www.mgateway.com" target="mgw">MGateway Ltd</a></h5>
     <p>
       This tool is designed for testing the EWD REST Services for use with VistA.  It creates the
       required encrypted version of your VistA Login credentials from an Access Code and Verify Code.  Use
