--- a/extras/www/ewd/ewdFederatorMgr/about.html
+++ b/extras/www/ewd/ewdFederatorMgr/about.html
@@ -3,6 +3,6 @@
     <h1>EWD Federator Manager</h1>
     <h3>Build 2</h3>
     <h4>5 February 2015</h4>
-    <h5>&copy; 2014-15 <a href="http://www.mgateway.com" target="mgw">M/Gateway Developments Ltd</a></h5>
+    <h5>&copy; 2023 <a href="https://www.mgateway.com" target="mgw">MGateway Ltd</a></h5>
   </div>
 </div>
